# aws-msk-emr-streaming-platform

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
compose/: docker-compose.yml  postgres-init.sql
config/: sink-configs.yaml  topics.yaml
dashboards/cloudwatch/: streaming_overview.json
dashboards/grafana/: streaming_health.json
docs/: ARCHITECTURE.md  BACKPRESSURE.md  COST_ANALYSIS.md  DEPLOYMENT.md  EXACTLY_ONCE.md  LOCAL_DEVELOPMENT.md  MSK_OPERATIONS.md  RUNBOOK.md  RUNTIME_COMPARISON.md
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/: dev.backend.hcl.example  dev.tfvars.example  prod.tfvars.example
infra/terraform/modules/apigw_websocket/: main.tf
infra/terraform/modules/databricks/: main.tf
infra/terraform/modules/dynamodb/: main.tf
infra/terraform/modules/ecs_clickhouse/: main.tf
infra/terraform/modules/elasticache/: main.tf
infra/terraform/modules/emr_eks/: main.tf
infra/terraform/modules/emr_serverless/: main.tf
infra/terraform/modules/flink/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/kinesis/: main.tf
infra/terraform/modules/kms/: main.tf
infra/terraform/modules/lambda/: main.tf
infra/terraform/modules/monitoring/: main.tf
infra/terraform/modules/msk/: main.tf
infra/terraform/modules/msk_connect/: main.tf
infra/terraform/modules/opensearch/: main.tf
infra/terraform/modules/polaris/: README.md  main.tf
infra/terraform/modules/s3/: main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/vpc/: main.tf
mskconnect/debezium/: mongo-sessions-cdc.properties  mysql-inventory-cdc.properties  postgres-orders-cdc.properties
mskconnect/s3sink/: s3-cold-archive.properties
notebooks/: 01_orders_cdc_comparison.py  02_dlt_orders_pipeline.py  03_runtime_benchmarks.py
scripts/: deploy-connectors.sh  register-local-debezium.sh  seed_sample_data.py  validate_connect_configs.py
src/flink/: clickstream_aggregation.sql  dedup_stream.py  orders_enrichment.sql
src/lambdas/: __init__.py  topic_creator.py  ws_broadcast.py  ws_connect.py  ws_disconnect.py
src/streaming/: __init__.py  cli.py
src/streaming/core/: __init__.py  types.py
src/streaming/jobs/: __init__.py  clickstream_aggregation.py  orders_cdc_enrichment.py  realtime_alerting.py
src/streaming/lineage/: openlineage_flink.py
src/streaming/orchestration/: __init__.py  emr_submit.py
src/streaming/sinks/: __init__.py  base.py  clickhouse_sink.py  opensearch_sink.py  redis_sink.py  s3_iceberg_sink.py  websocket_sink.py
src/streaming/sources/: __init__.py  debezium.py  kafka.py  kinesis.py
src/streaming/state/: __init__.py  config.py
src/streaming/transforms/: __init__.py  enrichment.py  windowing.py
src/streaming/utils/: __init__.py  logging_config.py  metrics.py  secrets.py  spark_session.py
tests/unit/: test_debezium.py  test_openlineage_flink.py  test_types.py  test_windowing.py
