[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-msk-emr-streaming-platform"
version = "1.0.0"
description = "Real-time streaming platform on AWS MSK + EMR + Flink with Databricks Streaming comparison track"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sushma K L", email = "sushmakl95@gmail.com" }]
keywords = [
    "streaming", "kafka", "msk", "emr", "spark", "flink", "kinesis",
    "debezium", "cdc", "databricks", "aws",
]

dependencies = [
    "pyspark>=3.5.0,<3.6",
    "delta-spark>=3.2.0,<3.3",
    "boto3>=1.34.0",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "opensearch-py>=2.4.0",
    "clickhouse-connect>=0.7.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "bandit[toml]>=1.7.8",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.7.0",
    "moto[all]>=5.0.0",
    "faker>=24.0.0",
    "testcontainers[kafka,postgres]>=4.0.0",
]

[project.scripts]
streaming = "streaming.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["streaming*", "flink*", "lambdas*"]

# --------------------------------------------------------------------------
# Ruff - battle-tested config with all 23 audit lessons
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "target/*",
    "notebooks/*",
    "spark-warehouse/*",
    "metastore_db/*",
    "flink-checkpoints/*",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
ignore = [
    "E501", "N812", "S608", "RUF022", "UP042", "B008", "RUF012",
    "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "RUF059", "B"]
"scripts/*" = ["S603", "S607"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = [
    "pyspark", "delta", "boto3", "moto", "kafka", "confluent_kafka",
    "redis", "opensearchpy", "clickhouse_connect", "psycopg2",
    "pydantic", "structlog", "click", "faker", "yaml", "pyflink",
    "testcontainers",
]
known-first-party = ["streaming", "flink", "lambdas"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "notebooks/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (slower, needs Docker)",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts", "notebooks"]
skips = ["B101", "B608", "B310"]
